# greplite

./: Cargo.toml  Cross.toml  README.md  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml  test.yml
src/: config.rs  error.rs  highlight.rs  io.rs  lib.rs  main.rs  regex.rs  runner.rs  search.rs
